# SPDX-FileCopyrightText: 2023 Roman Gilg <subdiff@gmail.com>
#
# SPDX-License-Identifier: GPL-2.0-or-later

add_subdirectory(helper)
add_subdirectory(fakes)

add_executable(tests
  lib/client.cpp
  lib/helpers.cpp
  lib/main.cpp
  lib/setup.cpp
  # integration tests
  activation_test.cpp
  bindings_test.cpp
  buffer_size_change_test.cpp
  client_machine.cpp
  colorcorrect_nightcolor_test.cpp
  dbus_interface_test.cpp
  debug_console_test.cpp
  decoration_input_test.cpp
  desktop_window_x11_test.cpp
  dont_crash_aurorae_destroy_deco.cpp
  dont_crash_cancel_animation.cpp
  dont_crash_cursor_physical_size_empty.cpp
  dont_crash_empty_deco.cpp
  dont_crash_glxgears.cpp
  dont_crash_no_border.cpp
  dont_crash_reinitialize_compositor.cpp
  dont_crash_useractions_menu.cpp
  gestures.cpp
  globalshortcuts_test.cpp
  idle_inhibition_test.cpp
  idle_test.cpp
  input_method.cpp
  input_stacking_order.cpp
  internal_window.cpp
  keyboard_keymap.cpp
  keyboard_layout_test.cpp
  keymap_creation_failure_test.cpp
  layer_shell.cpp
  lockscreen.cpp
  maximize_test.cpp
  modifier_only_shortcut_test.cpp
  move_resize_window_test.cpp
  no_global_shortcuts_test.cpp
  no_xdg_runtime_dir_test.cpp
  placement_test.cpp
  plasma_surface_test.cpp
  plasmawindow_test.cpp
  platformcursor.cpp
  pointer_constraints_test.cpp
  pointer_input.cpp
  quick_tiling_test.cpp
  scene_opengl_shadow_test.cpp
  scene_opengl_test.cpp
  scene_qpainter_shadow_test.cpp
  scene_qpainter_test.cpp
  screen_changes_test.cpp
  screen_edges.cpp
  screenedge_client_show_test.cpp
  screens.cpp
  showing_desktop_test.cpp
  stacking_order_test.cpp
  struts_test.cpp
  tabbox_test.cpp
  touch_input_test.cpp
  transient_placement.cpp
  virtual_desktop_test.cpp
  virtual_keyboard.cpp
  window_rules_test.cpp
  window_selection_test.cpp
  x11_client_test.cpp
  x11_timestamp_update.cpp
  xcb_size_hints.cpp
  xcb_wrapper.cpp
  xdg_activation.cpp
  xdgshellclient_rules_test.cpp
  xdgshellclient_test.cpp
  xwayland_input_test.cpp
  xwayland_selections_test.cpp
  # effect tests
  effects/desktop_switching_animation_test.cpp
  effects/fade_test.cpp
  effects/maximize_animation_test.cpp
  effects/minimize_animation_test.cpp
  effects/popup_open_close_animation_test.cpp
  effects/scripted_effects_test.cpp
  effects/slidingpopups_test.cpp
  effects/toplevel_open_close_animation_test.cpp
  effects/translucency_test.cpp
  # scripting tests
  scripting/minimizeall_test.cpp
  scripting/screenedge_test.cpp
  # unit tests
  ../libkwineffects/kwinglplatformtest.cpp
  ../libkwineffects/timelinetest.cpp
  ../libkwineffects/windowquadlisttest.cpp
  ../onscreennotificationtest.cpp
  ../opengl_context_attribute_builder_test.cpp
  ../tabbox/test_desktopchain.cpp
  ../tabbox/test_tabbox_clientmodel.cpp
  ../tabbox/test_tabbox_config.cpp
  ../tabbox/test_tabbox_handler.cpp
  ../test_gestures.cpp
  ../test_screen_paint_data.cpp
  ../test_window_paint_data.cpp
  ../test_xcb_window.cpp
  ../test_xkb.cpp
  # unit tests support
  ../libkwineffects/mock_gl.cpp
  ../tabbox/mock_tabboxclient.cpp
  ../tabbox/mock_tabboxhandler.cpp
  ../../render/backend/x11/glx_context_attribute_builder.cpp
)

target_link_libraries(tests
PRIVATE
  kwin_wayland_lib
  Qt::Test
  Catch2::Catch2WithMain
  KF5::Crash
  KF5::WindowSystem
  # Static plugins
  KWinQpaPlugin
  KF5WindowSystemKWinPlugin
  KF5IdleTimeKWinPlugin
)

include(Catch)
catch_discover_tests(tests)
